# leetcode

./: .gitignore
0001-two-sum/: 0001-two-sum.js  0001-two-sum.py
0003-longest-substring-without-repeating-characters/: 0003-longest-substring-without-repeating-characters.py
0011-container-with-most-water/: 0011-container-with-most-water.js
0015-3sum/: 0015-3sum.js
0019-remove-nth-node-from-end-of-list/: 0019-remove-nth-node-from-end-of-list.py
0020-valid-parentheses/: 0020-valid-parentheses.py
0021-merge-two-sorted-lists/: 0021-merge-two-sorted-lists.py
0036-valid-sudoku/: 0036-valid-sudoku.js
0049-group-anagrams/: 0049-group-anagrams.py
0070-climbing-stairs/: 0070-climbing-stairs.js  0070-climbing-stairs.py
0074-search-a-2d-matrix/: 0074-search-a-2d-matrix.py
0100-same-tree/: 0100-same-tree.py
0104-maximum-depth-of-binary-tree/: 0104-maximum-depth-of-binary-tree.py
0110-balanced-binary-tree/: 0110-balanced-binary-tree.py
0121-best-time-to-buy-and-sell-stock/: 0121-best-time-to-buy-and-sell-stock.py
0125-valid-palindrome/: 0125-valid-palindrome.js  0125-valid-palindrome.py
0128-longest-consecutive-sequence/: 0128-longest-consecutive-sequence.py
0141-linked-list-cycle/: 0141-linked-list-cycle.js  0141-linked-list-cycle.py
0143-reorder-list/: 0143-reorder-list.py
0150-evaluate-reverse-polish-notation/: 0150-evaluate-reverse-polish-notation.py
0659-encode-and-decode-strings/: pyproject.toml
0659-encode-and-decode-strings/leetcode_encode_strings/: encode_strings.py
0659-encode-and-decode-strings/tests/: test_encode_strings.py
(+18 files in other folders)
