[tool.poetry]
name = "leetcode-encode-strings"
version = "0.1.0"
description = ""
authors = ["Alex Yule <adyule@gmail.com>"]
readme = "README.md"
packages = [{include = "leetcode_encode_strings"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = {version = "^23.1a1", allow-prereleases = true}
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
